# qubes-core-admin-client

./: .gitignore  .gitlab-ci.yml  Dockerfile.run_tests  Makefile  README.md  check.sh  pyproject.toml  qvm_ls_mermaid.py  setup.py
.devcontainer/: Dockerfile  devcontainer.json
debian/: changelog  control  rules
doc/manpages/: qvm-ls.rst
qubesadmin/: app.py  base.py  device_protocol.py  devices.py  exc.py  features.py  firewall.py  label.py  spinner.py  storage.py  tags.py  typing_custom.py  utils.py
qubesadmin/backup/: __init__.py  core2.py  core3.py  dispvm.py  restore.py
qubesadmin/events/: __init__.py  utils.py
qubesadmin/tests/: __init__.py  app.py  devices.py  errors.py  firewall.py  mock_app.py
qubesadmin/tests/backup/: __init__.py  backupcompatibility.py
qubesadmin/tests/tools/: qvm_backup_restore.py  qvm_create.py  qvm_firewall.py  qvm_ls.py  qvm_notes.py  qvm_run.py  qvm_shutdown.py  qvm_start_daemon.py  qvm_template.py  qvm_template_postprocess.py  qvm_unpause.py
qubesadmin/tools/: __init__.py  dochelpers.py  qubes_prefs.py  qvm_backup.py  qvm_backup_restore.py  qvm_check.py  qvm_clone.py  qvm_create.py  qvm_device.py  qvm_features.py  qvm_firewall.py  qvm_kill.py  qvm_ls.py  qvm_notes.py  qvm_pause.py  qvm_pool.py  qvm_pool_legacy.py  qvm_prefs.py  qvm_remove.py  qvm_run.py  qvm_service.py  qvm_shutdown.py  qvm_start.py  qvm_start_daemon.py  qvm_tags.py  qvm_template.py  qvm_template_postprocess.py  qvm_unpause.py  qvm_volume.py  xcffibhelpers.py
qubesadmin/vm/: __init__.py
rpm_spec/: qubes-core-admin-client.spec.in
(+1 files in other folders)
